--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <head>
 <title>InfoXPy Inc.</title>
 </head>
+<style type="text/css">
+body {
+  background-image: url("by.png");
+}
+</style>
 <body>
 <h1>Welcome to InfoXPy Inc.!</h1>
 </body>
