--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <style type="text/css">
 body {
-  background-image: url("by.png");
+  background-image: url("bg.png");
 }
 </style>
 <body>
