--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@ body {
   background-image: url("bg.png");
   background-repeat: no-repeat;
 }
+maxwrit {
+  font-size: 60px;
+}
 </style>
 <body>
 <h1>Welcome to InfoXPy Inc.!</h1>
