--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ li a:hover {
 <body>
 <ul>
   <li><a class="active" href="#home">Home</a></li>
-  <li><a href="#news">News</a></li>
+  <li><a href="bg.mp4">播放视频</a></li>
   <li><a href="#contact">Contact</a></li>
   <li><a href="#about">About</a></li>
 </ul>
