--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@ li a:hover {
 </style>
 <body>
 <ul>
-  <li><a class="active" href="#home">Home</a></li>
+  <li><a class="active" href="https://infoxpy.github.io/">主页</a></li>
   <li><a href="bg.mp4">播放视频</a></li>
   <li><a href="#contact">Contact</a></li>
-  <li><a href="#about">About</a></li>
+  <li><a href="https://infoxpy.github.io/about.html">关于</a></li>
 </ul>
 </body>
 </html>
