--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ li a:hover {
 <body>
 <ul>
   <li><a class="active" href="https://infoxpy.github.io/">主页</a></li>
-  <li><a href="bg.mp4">播放视频</a></li>
+  <li><a href="你是不是人啊.mp4">播放视频</a></li>
   <li><a href="#contact">Contact</a></li>
   <li><a href="https://infoxpy.github.io/about.html">关于</a></li>
 </ul>
