--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@ li a:hover {
   <li><a href="你是不是人啊.mp4">播放视频</a></li>
   <li><a href="#contact">Contact</a></li>
   <li><a href="https://infoxpy.github.io/about.html">关于</a></li>
+  <li><a href="No.mp4">不要点开这个视频</a></li>
+
+
 </ul>
 </body>
 </html>
