--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <h1>关于Kerabix Inc.</h1>
-该网站未完工，QQ:2318218827，微信号：jiajiege9。
+该网站未完工，QQ:2318218827，微信号：jiajiege9，邮箱：kerabix@outlook.com。
 <h6>Copyright &copy; Kerabix(No Py Inc.) Inc. 2022</h6>
 </body>
 </html>
