--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@ li a {
 li a:hover {
   background-color: #111;
 }
+p.test {
+  border: 2px solid red;
+  border-radius: 5px;
+}
+
 </style>
 <body>
 <ul>
@@ -45,5 +50,6 @@ li a:hover {
 
 
 </ul>
+<p id="test">亻尔女子</p>
 </body>
 </html>
