--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 body {
   background-image: url("bg.png");
   background-repeat: no-repeat;
+  font-family: "Sofia";
+  font-size: 22px;
 }
 maxwrit {
   font-size: 60px;
