--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 <title>Kerabix Inc.</title>
 </head>
+<script src="https://www.code3dgames.com/three.js">
 <style type="text/css">
 body {
   background-image: url("bg.png");
