--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <head>
 <title>Kerabix Inc.</title>
 </head>
-<script src="https://www.code3dgames.com/three.js">
 <style type="text/css">
 body {
   background-image: url("bg.png");
@@ -49,7 +48,9 @@ p.test {
   <li><a href="你是不是人啊.mp4">播放视频</a></li>
   <li><a href="#contact">Contact</a></li>
   <li><a href="No.mp4">不要点开这个视频</a></li>
-
+  <li><a href="xxs.m3u8">xxs（m3u8视频）</a></li>
+  <li><a href="xxs2.m3u8">xxs2（m3u8视频）</a></li>
+  <li><a href="jk.m3u8">jk（m3u8视频）</a></li>
   <li><a href="https://infoxpy.github.io/about.html">关于</a></li>
 
 
