--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ p.test {
   <li><a href="#contact">Contact</a></li>
   <li><a href="No.mp4">不要点开这个视频</a></li>
   <li><a href="xxs.m3u8">xxs（m3u8视频）</a></li>
-  <li><a href="Arch胡桃大战史莱姆.m3u8">胡桃大战史莱姆（m3u8视频）</a></li>
+  <li><a href="arch胡桃大战史莱姆.m3u8">胡桃大战史莱姆（m3u8视频）</a></li>
   <li><a href="jk.m3u8">jk（m3u8视频）</a></li>
   <li><a href="https://infoxpy.github.io/about.html">关于</a></li>
 
